--- a/style.css
+++ b/style.css
@@ -1,1 +1,26 @@
+.button {
+    color: red;
+    background-color: gray;
+    font-size: 16px;
+    margin: 0 auto;
+    display: flex; 
+    justify-content: center;
+}
 
+
+
+section {
+    color: black;
+    background-color: gray;
+    font-size: 28px;
+    text-align: center;
+}
+
+header {
+    text-align: center;
+}
+.getWhooped {
+    font-size: 28px;
+    text-align: center;
+    background-color: white;
+}
